# rwth-parallel-graph-algorithms-ws2425

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmd/: build.sh  clean.sh  install.sh  run.sh
notes/: _quarto.yml  index.qmd
src/: main.cpp
